
Known Bugs can be found at the issues page on GitHub here: https://github.com/crkellen/bands/issues

####################################################################################################################

v0.4.6 --- Released: Not Yet!

	Additions:
		Gameplay:
			-
		UI:
			-

	Changes:
		-

	Fixes:
		-

	Other:
		-

	SPECIAL THANKS:

####################################################################################################################

v0.4.5 --- Released: 5-17-2017

	Additions:
		Gameplay:
			- Expanded map to 2x it's size (3200x1800), will be eventually 4x (6400x3840)
			- Changed Player's weapons to be on the outside of their body
				- Player's weapons also go transparent when they are invincible
			- Changed players to be fully colored in (just black for now)
			- Blocks now show their health
				- Starts whiteish with a tinge of red, to more red, to a darker red, then gone
			- Players respawn only in the middle of a tile
		UI:
			- Moved Player name to be on top of player
			- Moved Player Ammo up a pixel
			- Player name and Ammo are less transparent
			- Removed Gun when player is in build mode
			- Brought HP bar closer, made it a bit longer
			- Cursor changes to 'wait' cursor when reloading (This is temporary)
			- If the player cannot place a block, selection highlight is bright red

	Changes:
		- Changed grid.png to be 4x it's original size (Was: 1600x900, Now: 6400x3840) - Fixes #48
			- However, due to #53, a 2x version will be used (3200x1800)
		- Changed starting screen to show the background image at the start rather than a blank white background
		- Players can spawn in any gridX 1 to 39, and any gridY 1 to 20
		- Players temporarily have 20 blocks max, and 99 clips max
		- Changed framerate of game loop
			- Server is now every 30ms (was 40ms)
			- Client now uses requestAnimationFrame (was setInterval every 40ms) for rendering

	Fixes:
		- Added a mousedown listener for compatibility - Fixes #42