@@ -40,10 +40,10 @@ export class GLOBALS {
 
 //UTILITY FUNCTIONS
 
-export var getTimestamp = () => {
-  let date = new Date();
-  let hours = date.getHours();
-  let minutes = '0' + date.getMinutes();
-  let seconds = '0' + date.getSeconds();
+export const getTimestamp = () => {
+  const date = new Date();
+  const hours = date.getHours();
+  const minutes = '0' + date.getMinutes();
+  const seconds = '0' + date.getSeconds();
   return `${hours}:${minutes.substr(-2)}:${seconds.substr(-2)}`;
 };
